--- a/app/src/main/res/layout/activity_a.xml
+++ b/app/src/main/res/layout/activity_a.xml
@@ -49,5 +49,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/re_head" />
 
-
+    <com.example.androidx_branch.lianxiren.view.JumpShowTextView
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/tv_author_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </androidx.constraintlayout.widget.ConstraintLayout>
