--- a/app/src/main/res/layout/activity_lightoperate.xml
+++ b/app/src/main/res/layout/activity_lightoperate.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.androidx_branch.lighetoperate.MyConViewGroup xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.androidx_branch.lighetoperate.view.MyConViewGroup xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/conn"
     android:layout_width="match_parent"
@@ -7,8 +7,8 @@
 
     <View
         android:id="@+id/view1"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginLeft="150dp"
         android:layout_marginTop="150dp"
         android:background="@color/black"
@@ -17,8 +17,8 @@
 
     <View
         android:id="@+id/view2"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="120dp"
         android:background="@color/colorPrimary"
@@ -28,8 +28,8 @@
 
     <View
         android:id="@+id/view3"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginStart="90dp"
         android:layout_marginTop="110dp"
         android:background="@color/color_FFC9A0"
@@ -38,13 +38,39 @@
 
     <View
         android:id="@+id/view4"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="250dp"
         android:background="@color/colorPrimaryDark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.example.androidx_branch.lighetoperate.view.LitePager
+
+        android:id="@+id/litePager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#73000000">
+
+        <View
+            android:id="@+id/viewLeft"
+            android:layout_width="150dp"
+            android:layout_height="100dp"
+            android:background="@color/colorPrimaryDark" />
+
+        <View
+            android:id="@+id/viewCenter"
+            android:layout_width="150dp"
+            android:layout_height="100dp"
+            android:background="@color/colorAccent" />
+
+        <View
+            android:id="@+id/viewRight"
+            android:layout_width="150dp"
+            android:layout_height="100dp"
+            android:background="@color/color_FFEDDE" />
+    </com.example.androidx_branch.lighetoperate.view.LitePager>
 
     <ImageView
         android:id="@+id/imgHead"
@@ -64,7 +90,7 @@
         android:text="控制器：获取角度，让view进行旋转的"
         app:layout_constraintBottom_toTopOf="@+id/getAnfleView" />
 
-    <com.example.androidx_branch.lighetoperate.GetAngleView
+    <com.example.androidx_branch.lighetoperate.view.GetAngleView
         android:id="@+id/getAnfleView"
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -72,4 +98,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-</com.example.androidx_branch.lighetoperate.MyConViewGroup>
+</com.example.androidx_branch.lighetoperate.view.MyConViewGroup>
