--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,18 @@
             android:orientation="vertical">
 
             <Button
+                android:id="@+id/btnDou"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="震动动画" />
+
+            <Button
+                android:id="@+id/btncontinuousAnimal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="一个接一个动画" />
+
+            <Button
                 android:id="@+id/btn_reflection"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -77,12 +89,14 @@
                 android:id="@+id/btn_danmu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="弹幕" />
 
             <Button
                 android:id="@+id/btn_spann"
-                android:layout_width="match_parent"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="spann" />
 
             <Button
@@ -105,67 +119,87 @@
 
             <Button
                 android:id="@+id/btn_picture"
-                android:text="拍照"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="拍照" />
+
             <Button
                 android:id="@+id/btn_getpicture"
-                android:text="获取相册并裁剪"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="获取相册并裁剪" />
+
             <Button
                 android:id="@+id/btn_storage"
-                android:text="Android存储学习"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="Android存储学习" />
+
             <Button
                 android:id="@+id/btn_nettime"
-                android:text="获取网站时间"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="获取网站时间" />
+
             <Button
                 android:id="@+id/btn_netstudy"
-                android:text="分装网络库"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="分装网络库" />
+
             <Button
                 android:id="@+id/btn_crop"
-                android:text="图片裁剪"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="图片裁剪" />
+
             <Button
                 android:id="@+id/btn_scene"
-                android:text="场景转换"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="场景转换" />
 
             <Button
                 android:id="@+id/btn_cache"
-                android:text="SVGA使用"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="SVGA使用" />
 
             <Button
                 android:id="@+id/btn_picturegradlly"
-                android:text="图片一点点替换"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="图片一点点替换" />
+
             <Button
-                android:visibility="gone"
                 android:id="@+id/btn_presents"
-                android:text="礼物"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="礼物"
+                android:visibility="gone" />
+
             <Button
                 android:id="@+id/btn_picker"
-                android:text="自定义选择器"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="自定义选择器" />
+
             <Button
                 android:id="@+id/btnLightOperateView"
-                android:text="ViewGroup轻量级的添加删除view/获取手在屏幕上滑动的角度"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="ViewGroup轻量级的添加删除view/获取手在屏幕上滑动的角度" />
+            <Button
+                android:id="@+id/btnWindScreen"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="飘屏" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
