--- a/app/src/main/res/layout/activity_nestedscroll.xml
+++ b/app/src/main/res/layout/activity_nestedscroll.xml
@@ -29,12 +29,12 @@
             android:id="@id/id_stickynavlayout_indicator"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="#ffffffff"></com.example.androidx_branch.nestedscroll.method3.SimpleViewPagerIndicator>
+            android:background="#ffffffff"/>
 
         <androidx.viewpager.widget.ViewPager
             android:id="@id/id_stickynavlayout_viewpager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></androidx.viewpager.widget.ViewPager>
+            android:layout_height="match_parent"/>
 
     </com.example.androidx_branch.nestedscroll.method3.StickyNavLayout>
 
@@ -63,7 +63,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout><!--
+</androidx.constraintlayout.widget.ConstraintLayout>
+    <!--
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
